No wrapping was previously added to the top bar to prevent button wrapping, this was unfortunately cascaded to all children (which includes all bubbles) causing some layout issues. To remedy this I have reverted the no-wrap to the default behaviour for any direct child of the top bar using a direct child selector. Also removed the now redundant iPad specific class for device scaling.

--- a/Plugins/ViperToolbarPlugin/ViperToolbarPlugin.css
+++ b/Plugins/ViperToolbarPlugin/ViperToolbarPlugin.css
@@ -24,8 +24,9 @@
     -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
     white-space: nowrap;
 }
-.ViperTP-bar.device-ipad {
-/*     font-size: 13px; */
+
+.ViperTP-bar > * {
+    white-space: normal;
 }
 
 .ViperITP.themeDark.forTopbar.orientationLeft:before {
